fixup! add CI action script for Ubuntu 22.04

--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -20,6 +20,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - name: install libboost
+      run: sudo apt-get install libboost1.74-dev
     - name: init submodule
       run: git submodule update --init
     - name: download prebuilt
