--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -21,7 +21,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: install libboost
-      run: sudo apt-get install libboost1.74-dev
+      run: sudo apt-get install libboost-dev libboost-system-dev libboost-thread-dev
     - name: init submodule
       run: git submodule update --init
     - name: download prebuilt
