fixup! add CI action script for Ubuntu 22.04

--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -28,9 +28,9 @@ jobs:
       run: QuoteGeneration/download_prebuilt.sh
     - name: download SGXSDK
       run: |
-        wget -r -l1 -np -nd --accept 'sgx_linux_x64_sdk_*.bin' https://download.01.org/intel-sgx/latest/linux-latest/distro/ubuntu22.04-server/ -O ./sgx_linux_x64_sdk.bin
-        chmod +x ./sgx_linux_x64_sdk.bin
+        wget -r -l1 -np -nd --accept 'sgx_linux_x64_sdk_*.bin' https://download.01.org/intel-sgx/latest/linux-latest/distro/ubuntu22.04-server/
+        chmod +x ./sgx_linux_x64_sdk_*.bin
     - name: install SGXSDK
-      run: ./sgx_linux_x64_sdk.bin <<< "yes"
+      run: ./sgx_linux_x64_sdk_*.bin <<< "yes"
     - name: build
       run: source ./sgxsdk/environment; make all
