--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -57,6 +57,8 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
+      with:
+        submodules: recursive
 
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
@@ -77,17 +79,18 @@ jobs:
     # to build your code.
     # ℹ️ Command-line programs to run using the OS shell.
     # 📚 See https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#jobsjob_idstepsrun
-    - if: matrix.build-mode == 'manual'
+    - name: Build
+      if: matrix.build-mode == 'manual'
       run: |
        sudo apt-get install libcurl4-openssl-dev libboost-dev libboost-system-dev libboost-thread-dev
-        git submodule update --init --recursive
-        QuoteGeneration/download_prebuilt.sh
-        wget -r -l1 -np -nd --accept 'sgx_linux_x64_sdk_*.bin' https://download.01.org/intel-sgx/latest/linux-latest/distro/ubuntu22.04-server/
-        chmod +x ./sgx_linux_x64_sdk_*.bin
-        ./sgx_linux_x64_sdk_*.bin <<< "yes"
-        source ./sgxsdk/environment; make all
+       QuoteGeneration/download_prebuilt.sh
+       wget -r -l1 -np -nd --accept 'sgx_linux_x64_sdk_*.bin' https://download.01.org/intel-sgx/latest/linux-latest/distro/ubuntu22.04-server/
+       chmod +x ./sgx_linux_x64_sdk_*.bin
+       ./sgx_linux_x64_sdk_*.bin <<< "yes"
+       source ./sgxsdk/environment; make all
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
       with:
         category: "/language:${{matrix.language}}"
+        ignore_paths: external,QuoteVerification/sgxssl,QuoteVerification/QVL,QuoteVerification/QuoteVerificationService
