--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -96,7 +96,7 @@ jobs:
         output: sarif-results
         upload: failure-only
 
-    - name: filter-sarif
+    - name: Filter SARIF
       uses: advanced-security/filter-sarif@v1
       with:
         patterns: |
@@ -104,16 +104,10 @@ jobs:
           -QuoteVerification/QuoteVerificationService
           -QuoteVerification/QVL
           -QuoteVerification/sgxssl
-        input: sarif-results
-        output: sarif-results
+        input: sarif-results/${{matrix.language}}.sarif
+        output: sarif-results/${{matrix.language}}.sarif
 
     - name: Upload SARIF
       uses: github/codeql-action/upload-sarif@v3
       with:
-        sarif_file: sarif-results
-
-    - name: Upload loc as a Build Artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: sarif-results
-        path: sarif-results
+        sarif_file: sarif-results/${{matrix.language}}.sarif
