--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -82,12 +82,12 @@ jobs:
     - name: Build
       if: matrix.build-mode == 'manual'
       run: |
-       sudo apt-get install libcurl4-openssl-dev libboost-dev libboost-system-dev libboost-thread-dev
-       QuoteGeneration/download_prebuilt.sh
-       wget -r -l1 -np -nd --accept 'sgx_linux_x64_sdk_*.bin' https://download.01.org/intel-sgx/latest/linux-latest/distro/ubuntu22.04-server/
-       chmod +x ./sgx_linux_x64_sdk_*.bin
-       ./sgx_linux_x64_sdk_*.bin <<< "yes"
-       source ./sgxsdk/environment; make all
+        sudo apt-get install libcurl4-openssl-dev libboost-dev libboost-system-dev libboost-thread-dev
+        QuoteGeneration/download_prebuilt.sh
+        wget -r -l1 -np -nd --accept 'sgx_linux_x64_sdk_*.bin' https://download.01.org/intel-sgx/latest/linux-latest/distro/ubuntu22.04-server/
+        chmod +x ./sgx_linux_x64_sdk_*.bin
+        ./sgx_linux_x64_sdk_*.bin <<< "yes"
+        source ./sgxsdk/environment; make all
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
@@ -97,8 +97,7 @@ jobs:
         upload: failure-only
     
     - name: check
-    - run: |
-        ls sarif-results
+      run: ls sarif-results
 
     - name: Filter SARIF
       uses: advanced-security/filter-sarif@v1
