fixup! Update codeql.yml
Signed-off-by: Li, Xun <xun.li@intel.com>

--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -20,7 +20,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: install libboost
+    - name: install dependencies
       run: sudo apt-get install libcurl4-openssl-dev libboost-dev libboost-system-dev libboost-thread-dev
     - name: init submodule
       run: git submodule update --init --recursive
